--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="popup" id="telegramPopup">
     <h2>Support Us!</h2>
     <p>Join our Telegram channel for more updates.</p>
-    <button class="join-btn" onclick="window.open('https://t.me/+26DteEcMPfEwYmI1', '_blank'); closePopup();">Join Now and Support Us</button>
+    <button class="join-btn" onclick="window.open('https://t.me/whyratkholiii', '_blank'); closePopup();">Join Now and Support Us</button>
     <button class="joined-btn" onclick="closePopup()">Already Joined</button>
   </div>
 
